# exam-marker

./: .dockerignore  .gitignore  Dockerfile  README.md  render.yaml
backend/: Cargo.toml
backend/src/: config.rs  error.rs  main.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
backend/src/repositories/: answer_repo.rs  assessment_repository.rs  mod.rs  question_repo.rs  score_repo.rs  script_repo.rs  user_repo.rs
backend/src/routes/: analytics.rs  assessments.rs  auth.rs  health.rs  marking.rs  mod.rs  process.rs  questions.rs  review.rs  scripts.rs
backend/src/services/: analytics_service.rs  assessment_service.rs  auth_service.rs  mod.rs  ocr_client.rs  process_service.rs  question_service.rs  review_service.rs  scoring_service.rs  script_service.rs
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  Logo.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: Analytics.tsx  AssessmentDetail.tsx  Assessments.tsx  Dashboard.tsx  Grading.tsx  Home.tsx  Login.tsx  ScriptReview.tsx
frontend/src/types/: index.ts
infra/: docker-compose.yml
ocr-service/: Dockerfile  requirements.txt
ocr-service/app/: answer_splitter.py  main.py  models.py  ocr_engine.py  preprocessor.py
