[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net"] }
tower-http = "0.7.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.3", features = ["serde", "v4"] }

[dev-dependencies]
cargo-watch = "8.5.3"
